--- a/app/templates/auth/password_reset_confirm.html
+++ b/app/templates/auth/password_reset_confirm.html
@@ -23,7 +23,7 @@
                         
                         <div class="mb-3">
                             {{ form.code.label(class="form-label") }}
-                            {{ form.code(class="form-control", placeholder="Введите 8-символьный код") }}
+                            {{ form.code(class="form-control text-center fw-bold", placeholder="Введите 8-значный код", style="letter-spacing: 2px; font-family: 'Courier New', monospace;", maxlength="8", pattern="[0-9]{8}", oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 8)") }}
                             {% if form.code.errors %}
                                 <div class="text-danger mt-1">
                                     {% for error in form.code.errors %}
@@ -63,7 +63,7 @@
                     </form>
                     
                     <div class="text-center mt-3">
-                        <a href="{{ url_for('main.password_reset_request') }}" class="text-decoration-none">
+                        <a href="{{ url_for('auth.password_reset_request') }}" class="text-decoration-none">
                             <i class="fas fa-arrow-left me-1"></i>
                             Запросить новый код
                         </a>
